menambahkan beberapa content navbar di html

--- a/index.html
+++ b/index.html
@@ -4,13 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- css link -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- font Link -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;800&family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <!-- icon -->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
     <title>MaGer</title>
 </head>
 <body>
-    
+    <header>
+        <div class="navbar">
+            <div class="container">
+                <a href="" class="logo">Ma<span>Ger</span></a>
+                <div class="menu-wrapper">
+                    <div class="menu">
+                        <a href="#">Home</a>
+                        <a href="#">Service</a>
+                        <a href="#">Product</a>
+                        <a href="#">Contact</a>
+                    </div>
+                    <div class="icons">
+                        <i class='bx bx-search' ></i>
+                        <i class='bx bx-shopping-bag' ></i>
+                        <i class='bx bx-user' ></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
