--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
     <header>
         <div class="navbar">
             <div class="container">
-                <a href="" class="logo">Ma<span>Ger</span></a>
+                <a href="#" class="logo">Ma<span>Ger</span></a>
                 <div class="menu-wrapper">
                     <div class="menu">
-                        <a href="#">Home</a>
+                        <a href="#" class="active">Home</a>
                         <a href="#">Service</a>
                         <a href="#">Product</a>
                         <a href="#">Contact</a>
                     </div>
                     <div class="icons">
-                        <i class='bx bx-search' ></i>
-                        <i class='bx bx-shopping-bag' ></i>
+                        <i class='bx bx-search icon' ></i>
+                        <i class='bx bx-shopping-bag icon' ></i>
                         <i class='bx bx-user' ></i>
                     </div>
                 </div>
