--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <div class="container">
                 <a href="#" class="logo">Ma<span>Ger</span></a>
                 <div class="menu-wrapper">
+                    <div class="menuClose bx bx-x"></div>
                     <div class="menu">
                         <a href="#" class="active">Home</a>
                         <a href="#">Service</a>
@@ -33,8 +34,12 @@
                         <i class='bx bx-user' ></i>
                     </div>
                 </div>
+                <div class="menuOpen bx bx-grid-alt"></div>
             </div>
         </div>
     </header>
+    <script></script>
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+    <script src="script/script.js"></script>
 </body>
 </html>
