--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;800&family=Roboto:wght@300&display=swap" rel="stylesheet">
+      <!-- Link Swiper's CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
     <!-- icon -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
@@ -38,7 +40,47 @@
             </div>
         </div>
     </header>
-    <script></script>
+    <!-- home start -->
+    <section class="home" id="home">
+        <div class="container">
+            <div class="content-left">
+                <h1 class="heading">
+                    More Cozy, More Fresh Environment
+                </h1>
+                <p class="sub-heading">
+                    Make your room cooler and more comfortable with a variety of ornamental plants arranged in your room
+                </p>
+                <div class="btn-home">
+                    <a href="" class="btn-explore">Explore Now</a>
+                    <a href="" class="btn-learn">Learn More</a>
+                </div>
+            </div>
+            <div class="content-right">
+                 <!-- Swiper -->
+                <div class="swiper mySwiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <img src="img/home1.png" alt="">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/home2.png" alt="">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/home3.png" alt="">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/home4.png" alt="">
+                        </div>
+                    </div>
+                    <div class="swiper-pagination"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- home end -->
+    
+  <!-- Swiper JS -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <script src="script/script.js"></script>
 </body>
