styling home menu

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
             <div class="content-right">
                  <!-- Swiper -->
-                <div class="swiper mySwiper">
+                <div class="swiper mySwiperHome">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <img src="img/home1.png" alt="">
