menambah panel section dan responsive

--- a/index.html
+++ b/index.html
@@ -75,7 +75,53 @@
         </div>
     </section>
     <!-- home end -->
-    
+
+    <!-- panel start -->
+    <section class="panel">
+        <div class="container">
+            <div class="item">
+                <div class="icon">
+                    <i class='bx bx-cart-alt'></i>
+                </div>
+                <div class="textPanel">
+                    <h5 class="title">
+                        Free Delivery
+                    </h5>
+                    <p class="subtitle">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    </p>
+                </div>
+            </div>
+            <div class="item">
+                <div class="icon">
+                    <i class='bx bx-credit-card' ></i>
+                </div>
+                <div class="textPanel">
+                    <h5 class="title">
+                        Easy Payment
+                    </h5>
+                    <p class="subtitle">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    </p>
+                </div>
+            </div>
+            <div class="item">
+                <div class="icon">
+                    <i class='bx bx-donate-heart' ></i>
+                </div>
+                <div class="textPanel">
+                    <h5 class="title">
+                        Best Service
+                    </h5>
+                    <p class="subtitle">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- panel end -->
+
   <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
