membuat panel service dan animasi hover

--- a/index.html
+++ b/index.html
@@ -121,7 +121,45 @@
         </div>
     </section>
     <!-- panel end -->
+    <section class="service" id="service">
+        <div class="container">
+            <div class="row1">
+                <p class="label">
+                    WHAT WE SERVICE
+                </p>
+                <h3 class="title">We provide quality and maintained care </h3>
+            </div>
+            <div class="row2">
+                <div class="img-box">
+                    <div class="detail">
+                        <a href="#">Calathea lutea</a>
+                    </div>
+                    <img src="img/service1.png" alt="">
+                </div>
+                <div class="img-box">
+                    <div class="detail">
+                        <a href="#">Calathea lutea</a>
+                    </div>
+                    <img src="img/service2.png" alt="">
+                </div>
+                <div class="img-box">
+                    <div class="detail">
+                        <a href="#">Calathea lutea</a>
+                    </div>
+                    <img src="img/service3.png" alt="">
+                </div>
+                <div class="img-box">
+                    <div class="detail">
+                        <a href="#">Calathea lutea</a>
+                    </div>
+                    <img src="img/service4.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--  service start  -->
 
+    <!-- service end -->
   <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
