--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
         </div>
     </section>
     <!-- panel end -->
+    <!--  service start  -->
     <section class="service" id="service">
         <div class="container">
             <div class="row1">
@@ -157,9 +158,27 @@
             </div>
         </div>
     </section>
-    <!--  service start  -->
-
     <!-- service end -->
+
+    <!-- banner start -->
+    <section class="banner">
+        <div class="container">
+            <div class="banner-left">
+                <a href="#" class="img-box">
+                    <img src="img/banner1.png" alt="">
+                </a>
+            </div>
+            <div class="banner-right">
+                <a href="#" class="img-box">
+                    <img src="img/banner2.png" alt="">
+                </a>
+                <a href="#" class="img-box">
+                    <img src="img/banner3.png" alt="">
+                </a>
+            </div>
+        </div>
+    </section>
+    <!-- banner end -->
   <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
