adding swiperjs to product section and responsive

--- a/index.html
+++ b/index.html
@@ -179,6 +179,141 @@
         </div>
     </section>
     <!-- banner end -->
+
+    <!-- product start -->
+    <section class="product">
+        <div class="container">
+            <div class="row1">
+                <div class="title-section">
+                    <p class="label">OUR PRODUCT</p>
+                    <h3 class="heading">There are variant types of plants that will make your room more comfortable</h3>
+                </div>
+                <div class="btn-slider">
+                    <i class='bx bxs-chevron-left-circle' ></i>
+                    <i class='bx bxs-chevron-right-circle' ></i>
+                </div>
+            </div>
+            <div class="row2">
+                <div class="swiper mySwiperProduct">
+                    <div class="swiper-wrapper">
+                      <div class="swiper-slide card-product">
+                        <img src="img/product1.png" alt="">
+                    <div class="card-body">
+                        <a href="#" class="product-name">Calathea lutea</a>
+                        <div class="star">
+                            <i class='bx bxs-star'></i>
+                            <i class='bx bxs-star'></i>
+                            <i class='bx bxs-star'></i>
+                            <i class='bx bxs-star'></i>
+                            <i class='bx bxs-star'></i>
+                        </div>
+                        <p class="stock">(26 Stock)</p>
+                        <p class="price">Rp 120.000,00</p>
+                    </div>
+                        <a href="#"class="btn-card">
+                            <i class='bx bx-shopping-bag'></i>
+                        </a>
+                      </div>
+                      <div class="swiper-slide card-product">
+                        <img src="img/product2.png" alt="">
+                    <div class="card-body">
+                        <a href="#" class="product-name">Calathea lutea</a>
+                        <div class="star">
+                            <i class='bx bxs-star'></i>
+                            <i class='bx bxs-star'></i>
+                            <i class='bx bxs-star'></i>
+                            <i class='bx bxs-star'></i>
+                            <i class='bx bxs-star'></i>
+                        </div>
+                        <p class="stock">(26 Stock)</p>
+                        <p class="price">Rp 120.000,00</p>
+                    </div>
+                        <a href="#"class="btn-card">
+                            <i class='bx bx-shopping-bag'></i>
+                        </a>
+                      </div>
+                      <div class="swiper-slide card-product">
+                        <img src="img/product3.png" alt="">
+                    <div class="card-body">
+                        <a href="#" class="product-name">Calathea lutea</a>
+                        <div class="star">
+                            <i class='bx bxs-star'></i>
+                            <i class='bx bxs-star'></i>
+                            <i class='bx bxs-star'></i>
+                            <i class='bx bxs-star'></i>
+                            <i class='bx bxs-star'></i>
+                        </div>
+                        <p class="stock">(26 Stock)</p>
+                        <p class="price">Rp 120.000,00</p>
+                    </div>
+                        <a href="#"class="btn-card">
+                            <i class='bx bx-shopping-bag'></i>
+                        </a>
+                      </div>
+                      <div class="swiper-slide card-product">
+                        <img src="img/product2.png" alt="">
+                    <div class="card-body">
+                        <a href="#" class="product-name">Calathea lutea</a>
+                        <div class="star">
+                            <i class='bx bxs-star'></i>
+                            <i class='bx bxs-star'></i>
+                            <i class='bx bxs-star'></i>
+                            <i class='bx bxs-star'></i>
+                            <i class='bx bxs-star'></i>
+                        </div>
+                        <p class="stock">(26 Stock)</p>
+                        <p class="price">Rp 120.000,00</p>
+                    </div>
+                        <a href="#"class="btn-card">
+                            <i class='bx bx-shopping-bag'></i>
+                        </a>
+                      </div>
+                      <div class="swiper-slide card-product">
+                        <img src="img/product1.png" alt="">
+                    <div class="card-body">
+                        <a href="#" class="product-name">Calathea lutea</a>
+                        <div class="star">
+                            <i class='bx bxs-star'></i>
+                            <i class='bx bxs-star'></i>
+                            <i class='bx bxs-star'></i>
+                            <i class='bx bxs-star'></i>
+                            <i class='bx bxs-star'></i>
+                        </div>
+                        <p class="stock">(26 Stock)</p>
+                        <p class="price">Rp 120.000,00</p>
+                    </div>
+                        <a href="#"class="btn-card">
+                            <i class='bx bx-shopping-bag'></i>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+            </div>
+        </div>
+    </section>
+    <!-- product end -->
+
+    <!-- contact start -->
+    <section class="contact section-margin">
+        <div class="container">
+            <div class="content-left">
+                <p class="label">CONTACT</p>
+                <h3 class="heading">Do you have any problem? contact us immediately</h3>
+                <div class="thumnail-contact">
+                    <img src="img/contact.png" class="img-contact"alt="">
+                </div>
+            </div>
+            <div class="content-right">
+                <form action="" class="form-group">
+                    <input type="text" placeholder="Full Name">
+                    <input type="email" placeholder="Email Address" name="" id="">
+                    <textarea name="" id="" placeholder="Type your email here!" cols="30" rows="10"></textarea>
+                    <button type="submit" class="btn-contact">Send Massage</button>
+                </form>
+            </div>
+        </div>
+    </section>
+    <!-- contact end -->
   <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
