footer and finishing

--- a/index.html
+++ b/index.html
@@ -314,6 +314,63 @@
         </div>
     </section>
     <!-- contact end -->
+
+    <!-- footer start -->
+    <footer class="footer">
+        <div class="container">
+            <div class="row1">
+                <div class="content-left">
+                    <p class="logo"><span>Ma</span>Ger</p>
+                    <a href="#" class="email">help@mager.com</a>
+                    <p class="phone">+6281569696969</p>
+                    <div class="icons">
+                        <a href="#"><i class='bx bxl-whatsapp'></i></a>
+                        <a href="#"><i class='bx bxl-instagram'></i></a>
+                        <a href="#"><i class='bx bxl-facebook-circle'></i></a>
+                    </div>
+                </div>
+                <div class="content-right">
+                    <div class="col1">
+                        <h3>service</h3>
+                        <ul>
+                            <li>House Plant</li>
+                            <li>Garden Plant</li>
+                            <li>Vase</li>
+                            <li>Fertilizer</li>
+                        </ul>
+                    </div>
+                    <div class="col2">
+                        <h3>Information</h3>
+                        <ul>
+                            <li>Office Hours</li>
+                            <li>Requirements</li>
+                            <li>About us</li>
+                        </ul>
+                    </div>
+                    <div class="col3">
+                        <h3>Helpfull Link</h3>
+                        <ul>
+                            <li>service</li>
+                            <li>information</li>
+                            <li>Terms & Condition</li>
+                            <li>Privacy Policy</li>
+                        </ul>
+                    </div>
+                    <div class="col5">
+                        <h3>Address</h3>
+                        <p class="address">Jl Gatot Subroto
+                                No. 123 Blok. A23
+                                Malang, Jawa Timur</p>
+                        <a href="" class="maps">Google Maps</a>
+                    </div>
+                </div>
+            </div>
+            <div class="row2">
+                <p>&copy;Copyright 2023 All Right Reserved | Build by <a href="#">Nur fatah hamdani</a></p>
+            </div>
+        </div>
+    </footer>
+    <!-- footer end -->
   <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
