--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <!-- icon -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
-    <title>MaGer</title>
+    <title>PaGar</title>
 </head>
 <body>
     <header>
         <div class="navbar">
             <div class="container">
-                <a href="#" class="logo">Ma<span>Ger</span></a>
+                <a href="#" class="logo">Pa<span>Gar</span></a>
                 <div class="menu-wrapper">
                     <div class="menuClose bx bx-x"></div>
                     <div class="menu">
@@ -320,8 +320,8 @@
         <div class="container">
             <div class="row1">
                 <div class="content-left">
-                    <p class="logo"><span>Ma</span>Ger</p>
-                    <a href="#" class="email">help@mager.com</a>
+                    <p class="logo"><span>Pa</span>Gar</p>
+                    <a href="#" class="email">help@pagar.com</a>
                     <p class="phone">+6281569696969</p>
                     <div class="icons">
                         <a href="#"><i class='bx bxl-whatsapp'></i></a>
